--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,17 @@ input, button, textarea, select {
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
+.project h3{
+    padding-top: 10px;
+}
+.container{
+    display: grid;
+    grid-template-areas: "leftNav content";
+    grid-template-columns: 60px auto;
+
+}
 .left-nav {
+    grid-area: leftNav;
     background-color: #211c52;
     width: 56px;
     display: flex;
@@ -85,14 +95,18 @@ p, h1, h2, h3, h4, h5, h6 {
     z-index: 1;
     visibility: visible;
 }
+.content{
+    grid-area: content;
+}
 .section {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
 }
 
+
 .project {
     background-color: rgba(206, 206, 206, 0.301);
-    width: 88%;
+    width: 96%;
     height: 900px;
 }
 
@@ -110,6 +124,7 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .filter-right-section {
     display: flex;
+    padding: 20px;
 }
 
 .filter-buton {
@@ -124,7 +139,7 @@ p, h1, h2, h3, h4, h5, h6 {
     background-color: green;
     color: white;
     border: none;
-    font-size: 15px;
+    font-size: 18px;
 }
 .nav {
     display:flex;
@@ -132,6 +147,8 @@ p, h1, h2, h3, h4, h5, h6 {
     align-items: center;
     border-bottom: 1px solid black;
     border-bottom-color: hsla(89, 43%, 51%, 0.3);
+    padding: 10px;
+    
     
 }
 .left-title h1{
