--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,3 +217,64 @@ h5 .company{
     font: 600 12px/16px "Inter",sans-serif;
 }
 
+.dialog {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33,35,44,.48);
+    /* bottom: 0;
+    left: 0; */
+    position: fixed;
+    /* right: 0;
+    top: 0; */
+    margin: auto;
+    z-index: 1;
+    padding: 30px;
+    border: none;
+}
+
+form {
+    margin: auto;
+    background-color: rgb(255, 255, 255);
+    max-width: 40%;
+    display: grid;
+    grid-template-areas: 
+    "form-header form-header"
+    "form-left form-right"
+    "form-footer form-footer"
+    ;
+}
+
+.deal-data {
+    display: flex;
+}
+
+.form-left {
+    grid-area: form-left;
+}
+
+.form-right {
+    grid-area: form-right;
+}
+
+.form-footer {
+    grid-area: form-footer;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.form-header {
+    grid-area: form-header;
+    display: flex;
+    justify-content: space-between;
+}
+
+.reset {
+    border: none;
+    padding: 10px;
+    background-color: transparent;
+}
+
+.reset:hover {
+    background-color: rgb(33 35 44/5%);
+}
+
