js icin form baglantisi kuruldu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,3 +297,12 @@ form select {
 .form-header h3 {
     margin: 10px;
 }
+
+button {
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
