--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,9 @@ input, button, textarea, select {
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
+.product li{
+    margin-bottom: 8px;
+}
 .project h3{
     padding-top: 10px;
     font-size: 16px;
