--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ p, h1, h2, h3, h4, h5, h6 {
 .project {
     background-color: rgba(119, 119, 119, 0.103);
     width: 96%;
-    height: 900px;
+    height: 100%;
     padding: 15px;
 }
 
