--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,9 @@ body {
 }
 input, button, textarea, select {
   font: inherit;
+  border: 1px solid #e7e7e7;
+  border-radius: 4px;
+  padding: 5px;
 }
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
@@ -65,7 +68,6 @@ p, h1, h2, h3, h4, h5, h6 {
     border-radius: 6px;
     margin-block: 6px;
     position: relative;
-
 }
 .menu-item:hover {
     background-color: #6150e1;
@@ -117,10 +119,15 @@ p, h1, h2, h3, h4, h5, h6 {
 .project-add {
     border: none;
     font-size: 25px;
-    color: rgb(131, 131, 131);
+    color: transparent;
     width: 100%;
     text-align: center;
-    cursor: pointer;;
+    cursor: pointer;
+}
+.project:hover .project-add {
+    color: rgb(131, 131, 131);
+    background-color: #e7e7e7;
+    border-radius: 6px;
 }
 
 .filter-left-section li {
@@ -153,8 +160,6 @@ p, h1, h2, h3, h4, h5, h6 {
     border-bottom: 1px solid black;
     border-bottom-color: hsla(89, 43%, 51%, 0.3);
     padding: 10px;
-    
-    
 }
 .left-title h1{
 font:600 16px/24px "Inter",sans-serif
@@ -220,7 +225,6 @@ h5 .company{
 li #cost {
     font: 600 12px/16px "Inter",sans-serif;
 }
-
 .dialog {
     width: 100%;
     height: 100%;
@@ -246,7 +250,8 @@ form {
     "form-left form-right"
     "form-footer form-footer"
     ;
-    /* padding: 20px; */
+    grid-template-columns: 1fr 1fr;
+
 }
 
 .deal-data {
@@ -294,6 +299,7 @@ form input,
 form select {
     margin-bottom: 10px;
     outline: none;
+    width: 100%;
 }
 .form-footer button {
     margin: 5px;
