--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,3 +316,44 @@ a {
     text-decoration: none;
     color: black;
 }
+
+.tableList {
+    display: block;
+    margin: 0 auto;
+}
+
+.tableList h4 {
+    text-align: center;
+}
+
+.table {
+    display: flex;
+    padding: 8px;
+}
+
+.tableData{
+    display: flex;
+    padding: 50px;
+}
+.tableTitleColmn {
+    width: 450px;
+    border: 1px solid rgb(187, 186, 186);
+}
+
+.tableCostColmn {
+    border: 1px solid rgb(187, 186, 186);
+    width: 200px;
+    border-left: none;
+}
+
+.tableCompanyColmn {
+    border: 1px solid rgb(187, 186, 186);
+    width: 350px;
+    border-left: none;
+}
+
+.tablePersonColmn {
+    border: 1px solid rgb(187, 186, 186);
+    width: 350px;
+    border-left: none;
+}
