--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,9 @@ input, button, textarea, select {
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
+.product {
+    min-height: 100px;
+}
 .rotate, .list, .filter-buton, .searchInput, .right-nav{
     display: none;
 }
